<resources>
    <string name="app_name">E-mobi</string>
    <string name="action_settings">Свойства</string>
    <string name="Clients">Клиенты</string>
    <string name="Orders">Заказы</string>
    <string name="Order">Новый заказ</string>
    <string name="UploadData">Выгрузить заказы</string>
    <string name="DownloadTovary">Полная загрузка</string>
    <string name="DownloadKlienty">Обновление данных</string>
    <string name="Client">Клиент</string>
    <string name="TypCeny">Тип оплаты:</string>
    <string name="Podbor">Подбор товаров</string>
    <string name="Nompp">№ п/п</string>
    <string name="NaimNom">Наименование</string>
    <string name="CenaNom">Цена</string>
    <string name="KolVoNom">Кол-во</string>
    <string name="SummaNom">Сумма</string>
    <string name="OK">OK</string>
    <string name="save">Сохранить</string>
    <string name="save_data">Сохранить данные?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="saved">Сохранено</string>
    <string name="exit">Выход из заказа</string>
    <string name="Otpravit">Отправить</string>
    <string name="tp_name">Имя</string>
    <string name="tp_komment">Введите имя торгового представителя</string>
    <string name="str_Delete">Удалить</string>
    <string name="Otpravit_optom">Отправить</string>
    <string name="kopy">Копировать</string>
    <string name="open">Открыть</string>
    <string name="komment">Комментарий</string>
    <string name="VybKlienta">Выбор клиента</string>
    <string name="find">Поиск</string>
    <string name="Clear">X</string>
    <string name="tovary">Каталог товаров</string>
    <string name="back">Назад</string>
    <string name="alert1">Заказ не записан. Сохранить?</string>
</resources>
